Blazor configuration işlemleri yapıldı.

--- a/src/MK.Accountancy.DbMigrator/appsettings.json
+++ b/src/MK.Accountancy.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=LAPTOP-4H0J9S7K\\SQLEXPRESS;Database=Accountancy;Trusted_Connection=True"
+    "Default": "Server=MK\\SQLEXPRESS;Database=Accountancy;Trusted_Connection=True"
   },
   "IdentityServer": {
     "Clients": {
