--- a/src/MK.Accountancy.Blazor/MK.Accountancy.Blazor.csproj
+++ b/src/MK.Accountancy.Blazor/MK.Accountancy.Blazor.csproj
@@ -15,6 +15,8 @@
   <ItemGroup>
     <PackageReference Include="Blazorise.Bootstrap5" Version="0.9.5.4" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.5.4" />
+    <PackageReference Include="DevExpress.Blazor" Version="21.2.3" />
+    <PackageReference Include="DevExpress.Blazor.Reporting" Version="21.2.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
   </ItemGroup>
