--- a/src/MK.Accountancy.Blazor/appsettings.json
+++ b/src/MK.Accountancy.Blazor/appsettings.json
@@ -4,7 +4,7 @@
     "RedirectAllowedUrls": "https://localhost:44313"
   },
   "ConnectionStrings": {
-    "Default": "Server=LAPTOP-4H0J9S7K\\SQLEXPRESS;Database=Accountancy;Trusted_Connection=True"
+    "Default": "Server=MK\\SQLEXPRESS;Database=Accountancy;Trusted_Connection=True"
   },
   "AuthServer": {
     "Authority": "https://localhost:44313",
