--- a/src/MK.Blazor.Core/MK.Blazor.Core.csproj
+++ b/src/MK.Blazor.Core/MK.Blazor.Core.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <!--EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+    <CompilerGeneratedFilesOutputPath>GeneratedFiles</CompilerGeneratedFilesOutputPath-->
   </PropertyGroup>
 
 
