Comboboxedit enum componeneti oluşturuldu.

--- a/src/MK.Blazor.Core/MK.Blazor.Core.csproj
+++ b/src/MK.Blazor.Core/MK.Blazor.Core.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="DevExpress.Blazor.Reporting.Viewer" Version="21.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Components" Version="5.1.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,7 +26,6 @@
     <Folder Include="Components\DevComp\DataViewers\" />
     <Folder Include="Components\DevComp\Utilities\" />
     <Folder Include="Components\DevComp\Templates\" />
-    <Folder Include="Helpers\" />
     <Folder Include="Services\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\js\" />
