--- a/src/MK.Accountancy.Blazor/MK.Accountancy.Blazor.csproj
+++ b/src/MK.Accountancy.Blazor/MK.Accountancy.Blazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\MK.Accountancy.Application\MK.Accountancy.Application.csproj" />
     <ProjectReference Include="..\MK.Accountancy.HttpApi\MK.Accountancy.HttpApi.csproj" />
     <ProjectReference Include="..\MK.Accountancy.EntityFrameworkCore\MK.Accountancy.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\MK.Blazor.Core\MK.Blazor.Core.csproj" />
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="5.1.4" />
     <PackageReference Include="Volo.Abp.Autofac" Version="5.1.4" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="5.1.4" />
