page alt yapısı oluşturuldu.

--- a/src/MK.Accountancy.DbMigrator/appsettings.json
+++ b/src/MK.Accountancy.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=MK\\SQLEXPRESS;Database=Accountancy;Trusted_Connection=True"
+    "Default": "Server=MK\\SQLEXPRESS;Initial Catalog=MK;User ID=sa;Password=karakol1"
   },
   "IdentityServer": {
     "Clients": {
