--- a/src/MK.Accountancy.DbMigrator/appsettings.json
+++ b/src/MK.Accountancy.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=MK\\SQLEXPRESS;Initial Catalog=MK;User ID=sa;Password=karakol1"
+    "Default": "Server=89.43.66.108\\MSSQLSERVER2012;Initial Catalog=MK;User ID=MK;Password=26MRT.ky26"
   },
   "IdentityServer": {
     "Clients": {
