--- a/src/MK.Accountancy.Blazor/MK.Accountancy.Blazor.csproj
+++ b/src/MK.Accountancy.Blazor/MK.Accountancy.Blazor.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="DevExpress.Blazor.Reporting" Version="21.2.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+    <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="5.1.4" />
   </ItemGroup>
 
   <ItemGroup>
