--- a/src/MK.Blazor.Core/MK.Blazor.Core.csproj
+++ b/src/MK.Blazor.Core/MK.Blazor.Core.csproj
@@ -8,10 +8,6 @@
     <CompilerGeneratedFilesOutputPath>GeneratedFiles</CompilerGeneratedFilesOutputPath-->
   </PropertyGroup>
 
-  <ItemGroup>
-    <Content Remove="Components\DevComp\Layouts\DevPopupListPageLayout.razor" />
-  </ItemGroup>
-
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
@@ -23,23 +19,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0" />
     <PackageReference Include="Volo.Abp.AspNetCore.Components" Version="5.1.4" />
+    <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="5.1.4" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Components\DevComp\Templates\" />
     <Folder Include="wwwroot\js\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Components\DevComp\Layouts\DevPopupListPageLayout.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="Components\DevComp\Layouts\DevPopupListPageLayout.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Components\DevComp\Layouts\DevPopupListPageLayout.razor" />
   </ItemGroup>
 
 </Project>
