--- a/src/MK.Accountancy.Blazor/appsettings.json
+++ b/src/MK.Accountancy.Blazor/appsettings.json
@@ -4,7 +4,8 @@
     "RedirectAllowedUrls": "https://localhost:44313"
   },
   "ConnectionStrings": {
-    "Default": "Server=89.43.66.108\\MSSQLSERVER2012;Initial Catalog=MK;User ID=MK;Password=26MRT.ky26"
+    /*"Default": "Server=89.43.66.108\\MSSQLSERVER2012;Initial Catalog=MK;User ID=MK;Password=26MRT.ky26"*/
+    "Default": "Server=MK\\SQLEXPRESS;Database=Accountancy2;Trusted_Connection=True"
   },
   "AuthServer": {
     "Authority": "https://localhost:44313",
