--- a/src/MK.Accountancy.DbMigrator/appsettings.json
+++ b/src/MK.Accountancy.DbMigrator/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=89.43.66.108\\MSSQLSERVER2012;Initial Catalog=MK;User ID=MK;Password=26MRT.ky26"
+    /*"Default": "Server=89.43.66.108\\MSSQLSERVER2012;Initial Catalog=MK;User ID=MK;Password=26MRT.ky26"*/
+    "Default": "Server=MK\\SQLEXPRESS;Database=Accountancy2;Trusted_Connection=True"
   },
   "IdentityServer": {
     "Clients": {
