--- a/src/MK.Accountancy.Blazor/MK.Accountancy.Blazor.csproj
+++ b/src/MK.Accountancy.Blazor/MK.Accountancy.Blazor.csproj
@@ -47,12 +47,33 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Reports\Invoices\Invoice.vsrepx" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Reports\Invoices\Invoice.vsrepx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Pages\**\*.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Pages\**\*.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Reports\Receipts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Reports\Invoices\Invoice.cs">
+      <DependentUpon>Invoice.vsrepx</DependentUpon>
+    </Compile>
+    <Compile Update="Reports\Invoices\Invoice.Designer.cs">
+      <DependentUpon>Invoice.vsrepx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
