--- a/src/MK.Accountancy.Blazor/MK.Accountancy.Blazor.csproj
+++ b/src/MK.Accountancy.Blazor/MK.Accountancy.Blazor.csproj
@@ -52,8 +52,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Reports\Invoices\Invoice.vsrepx" />
-    <EmbeddedResource Include="Reports\Receipts\CollectionReceipts\CollectionReceipt.vsrepx" />
+    <EmbeddedResource Include="Reports\Invoices\Invoice.vsrepx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\Receipts\CollectionReceipts\CollectionReceipt.vsrepx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
